--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
            this season!</p>
         <p><a href="speakers.html">Speaker
               information</a></p>
+        
+              <div class="content"> <p>This is some content for the website. <!-- Missing closing </div> tag here -->
     </body>
 </html>
