Closed div and p

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <p><a href="speakers.html">Speaker
               information</a></p>
         
-              <div class="content"> <p>This is some content for the website. <!-- Missing closing </div> tag here -->
+              <div class="content"> <p>This is some content for the website. </p></div>
     </body>
 </html>
